// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlserver"
  url      = env("DATABASE_URL")
  shadowDatabaseUrl = env("SHADOW_DATABASE_URL")
}

// Settings Management System
model Setting {
  id        String   @id @default(cuid())
  category  String   // Priority, Segment, Distributor, etc.
  key       String   // Actual value (e.g., "A", "Fine Dining", "Sysco")
  label     String?  // Display name
  color     String?  // For priority colors and UI highlighting
  sortOrder Int      // For maintaining specific order in dropdowns
  active    Boolean  @default(true)
  metadata  String?  @db.Text    // For category-specific additional data
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([category, key])
  @@index([category, active])

  organizationsWithPriority  Organization[] @relation(name: "OrganizationPriority")
  organizationsWithSegment   Organization[] @relation(name: "OrganizationSegment")
  organizationsWithDistributor Organization[] @relation(name: "OrganizationDistributor")
  contactsWithPosition Contact[] @relation(name: "ContactPosition")
}

// User model for authentication
model User {
  id            String    @id @default(cuid())
  email         String    @unique
  name          String?
  image         String?
  emailVerified DateTime?
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  isActive      Boolean   @default(true)
  role          String    @default("user") // admin, user
  password      String? // Hashed password for local authentication
  lastLoginAt   DateTime?

  accounts      Account[]
  sessions      Session[]
  organizations OrganizationUser[]
  interactions  Interaction[]
  opportunities Opportunity[]
  managedOrganizations Organization[] @relation(name: "UserManagedOrganizations") // Added for reciprocal relation

  @@index([email])
  @@index([isActive])
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String? @db.Text
  access_token      String? @db.Text
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @db.Text
  session_state     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])

}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)


}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

model Organization {
  id               String    @id @default(cuid())
  name             String
  description      String?   @db.Text
  website          String?
  phone            String?
  email            String?
  addressLine1     String?
  addressLine2     String?
  city             String?
  state            String?
  postalCode       String?
  country          String?
  isActive         Boolean   @default(true)
  createdAt        DateTime  @default(now())
  updatedAt        DateTime  @updatedAt
  accountManagerId String?

  // Food Service Specific Fields
  priorityId       String?
  priority         Setting?        @relation(name: "OrganizationPriority", fields: [priorityId], references: [id], onDelete: NoAction, onUpdate: NoAction)
  segmentId        String?
  segment          Setting?        @relation(name: "OrganizationSegment", fields: [segmentId], references: [id], onDelete: NoAction, onUpdate: NoAction)
  distributorId    String?
  distributor      Setting?        @relation(name: "OrganizationDistributor", fields: [distributorId], references: [id], onDelete: NoAction, onUpdate: NoAction)

  // Revenue Tracking Fields
  annualRevenue    Decimal?        @db.Decimal(18, 2)
  totalValue       Decimal?        @db.Decimal(18, 2)

  // Relations
  accountManager   User?     @relation(name: "UserManagedOrganizations", fields: [accountManagerId], references: [id])
  contacts         Contact[]
  interactions     Interaction[]
  opportunities    Opportunity[]
  users            OrganizationUser[]

  @@index([name])
  @@index([city])
  @@index([state])
  @@index([postalCode])
  @@index([country])
  @@index([accountManagerId])
  @@index([priorityId])
  @@index([segmentId])
  @@index([distributorId])
  @@index([isActive])
}

model OrganizationUser {
  id             String   @id @default(cuid())
  organizationId String
  userId         String
  role           String   // e.g., "admin", "member"
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: NoAction, onUpdate: NoAction)
  user         User         @relation(fields: [userId], references: [id], onDelete: NoAction, onUpdate: NoAction)

  @@unique([organizationId, userId])

  @@index([organizationId])
}

model Contact {
  id             String    @id @default(cuid())
  organizationId String
  firstName      String
  lastName       String
  email          String?
  phone          String?
  title          String?
  positionId     String? // References Setting (category: "Position")
  position       Setting?  @relation(name: "ContactPosition", fields: [positionId], references: [id], onDelete: NoAction, onUpdate: NoAction)
  notes          String?   @db.Text
  isActive       Boolean   @default(true)
  createdAt      DateTime  @default(now())
  updatedAt      DateTime  @updatedAt

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  interactions Interaction[]
  opportunities Opportunity[]

  @@index([organizationId])
  @@index([firstName])
  @@index([lastName])
  @@index([email])
  @@index([phone])
  @@index([isActive])
  @@index([positionId])
}

model Interaction {
  id               String       @id @default(cuid())
  organizationId   String
  contactId        String?
  userId           String       // Account manager who logged the interaction
  interactionDate  DateTime
  typeId           String       // References Setting (category: "InteractionType")
  notes            String?      @db.Text
  followUpDate     DateTime?
  isCompleted      Boolean      @default(false)
  createdAt        DateTime     @default(now())
  updatedAt        DateTime     @updatedAt

  // Food Service Specific Fields


  // Relations
  organization     Organization @relation(fields: [organizationId], references: [id], onDelete: NoAction, onUpdate: NoAction)
  contact          Contact?     @relation(fields: [contactId], references: [id], onDelete: SetNull)
  user             User         @relation(fields: [userId], references: [id], onDelete: NoAction, onUpdate: NoAction) // Break cascade cycle

  // Indexes for performance optimization
  @@index([organizationId])
  @@index([contactId])
  @@index([userId])
  @@index([interactionDate])
}

model Opportunity {
  id                String    @id @default(cuid())
  organizationId    String
  contactId         String?
  userId            String    // Account manager responsible
  principal         String    // References Setting (category: "Principal")
  stage            String     // References Setting (category: "Stage")
  status           String     // References Setting (category: "Status")
  source           String?    // References Setting (category: "Source")
  reason           String?    @db.Text
  probability      Int        // 0-100
  expectedRevenue  Decimal?   @db.Decimal(10, 2)
  expectedCloseDate DateTime?
  notes            String?    @db.Text
  isActive         Boolean    @default(true)
  createdAt        DateTime   @default(now())
  updatedAt        DateTime   @updatedAt

  organization     Organization @relation(fields: [organizationId], references: [id], onDelete: NoAction, onUpdate: NoAction)
  contact          Contact?     @relation(fields: [contactId], references: [id], onDelete: SetNull)
  user             User         @relation(fields: [userId], references: [id], onDelete: NoAction, onUpdate: NoAction)

  @@index([organizationId])
  @@index([contactId])
  @@index([userId])
  @@index([principal])
  @@index([stage])
  @@index([status])
  @@index([isActive])
  @@index([expectedCloseDate])
}